@@ -1,3 +1,6 @@
+2011-04-29  Roland Clobus <rclobus@rclobus.nl>
+	* common/gtk/guimap.c, client/gtk/resource.c: Replace gdk_draw_drawable.
+
 2011-02-23  Micah Bunting <Amnykon@gmail.com>
 	* editor/gtk/editor.c, common/gtk/guimap.c, common/gtk/guimap.h,
 	client/gtk/gui.c: Add pan and zoom for the scroll wheel.
